final merge gis-engine
