# go-apps/meep-gis-engine/api/swagger.yaml
@@ -250,7 +250,7 @@ paths:
         500:
           description: "Internal server error"
   /geodata/{assetName}/distanceTo:
-    get:
+    post:
       tags:
       - "Geospatial Data"
       summary: "Get distance between geospatial data points"
@@ -283,7 +283,7 @@ paths:
         500:
           description: "Internal server error"
   /geodata/{assetName}/withinRange:
-    get:
+    post:
       tags:
       - "Geospatial Data"
       summary: "Returns if a geospatial data points is within a specified distance\
@@ -374,14 +374,26 @@ definitions:
       longitude: 6.0274563
   DistanceResponse:
     type: "object"
+    required:
+    - "distance"
     properties:
       distance:
         type: "number"
         format: "float"
         description: "Distance between two points (in meters)"
+      latitude:
+        type: "number"
+        format: "float"
+        description: "Destination asset latitude"
+      longitude:
+        type: "number"
+        format: "float"
+        description: "Destination asset longitude"
     description: "Distance response"
     example:
       distance: 0.8008282
+      latitude: 6.0274563
+      longitude: 1.4658129
   GeoDataAssetList:
     type: "object"
     properties:
@@ -458,15 +470,17 @@ definitions:
       longitude: 6.0274563
   WithinRangeResponse:
     type: "object"
+    required:
+    - "within"
     properties:
       latitude:
         type: "number"
         format: "float"
-        description: "Asset latitude"
-      lontitude:
+        description: "Destination asset latitude"
+      longitude:
         type: "number"
         format: "float"
-        description: "Asset longitude"
+        description: "Destination asset longitude"
       within:
         type: "boolean"
         description: "Within range result (e.g. true = within range, false = beyond\
@@ -475,7 +489,7 @@ definitions:
     example:
       within: true
       latitude: 0.8008282
-      lontitude: 6.0274563
+      longitude: 6.0274563
   GeoData:
     type: "object"
     properties:
