# go-apps/meep-gis-engine/server/gis-engine.go
@@ -22,6 +22,7 @@ import (
 	"fmt"
 	"net/http"
 	"os"
+	"strconv"
 	"strings"
 	"sync"
 	"time"
@@ -1106,11 +1107,22 @@ func geGetAssetData(w http.ResponseWriter, r *http.Request) {
 	fmt.Fprint(w, string(jsonResponse))
 }
 
+func convertJsonToPoint(jsonData string) *Point {
+
+	var obj Point
+	err := json.Unmarshal([]byte(jsonData), &obj)
+	if err != nil {
+		log.Error(err.Error())
+		return nil
+	}
+	return &obj
+}
+
 func geGetDistanceGeoDataByName(w http.ResponseWriter, r *http.Request) {
 	// Get asset name from request path parameters
 	vars := mux.Vars(r)
 	assetName := vars["assetName"]
-	log.Debug("Get GeoData for asset: ", assetName)
+	log.Debug("Get Distance GeoData for asset: ", assetName)
 
 	// Make sure scenario is active
 	if ge.activeModel.GetScenarioName() == "" {
@@ -1120,12 +1132,25 @@ func geGetDistanceGeoDataByName(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// Find asset in active scenario model
-	node := ge.activeModel.GetNode(assetName)
-	if node == nil {
-		err := errors.New("Asset not found in active scenario")
+	srcAsset := ge.assets[assetName]
+	if srcAsset == nil {
+		err := errors.New("Asset not in scenario")
 		log.Error(err.Error())
-		http.Error(w, err.Error(), http.StatusNotFound)
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	srcLongStr := ""
+	srcLatStr := ""
+	if srcAsset.geoData != nil {
+		srcPosition := srcAsset.geoData.position
+		srcPoint := convertJsonToPoint(srcPosition)
+		srcLongStr = strconv.FormatFloat(float64(srcPoint.Coordinates[0]), 'f', -1, 32)
+		srcLatStr = strconv.FormatFloat(float64(srcPoint.Coordinates[1]), 'f', -1, 32)
+	} else {
+		err := errors.New("Asset has no geo location")
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
 
@@ -1145,20 +1170,55 @@ func geGetDistanceGeoDataByName(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	dstLong := float32(0.0)
+	dstLat := float32(0.0)
+	dstLongStr := ""
+	dstLatStr := ""
 	if distanceParam.AssetName != "" {
 
 		// Find second asset in active scenario model
-		node := ge.activeModel.GetNode(assetName)
-		if node == nil {
-			err := errors.New("Asset not found in active scenario")
+		dstAsset := ge.assets[distanceParam.AssetName]
+		if dstAsset == nil {
+			err := errors.New("Destination asset not in scenario")
 			log.Error(err.Error())
-			http.Error(w, err.Error(), http.StatusNotFound)
+			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
 		}
+		if dstAsset.geoData != nil {
+			dstPosition := dstAsset.geoData.position
+			dstPoint := convertJsonToPoint(dstPosition)
+			dstLong = dstPoint.Coordinates[0]
+			dstLat = dstPoint.Coordinates[1]
+			dstLongStr = strconv.FormatFloat(float64(dstPoint.Coordinates[0]), 'f', -1, 32)
+			dstLatStr = strconv.FormatFloat(float64(dstPoint.Coordinates[1]), 'f', -1, 32)
+		} else {
+			err := errors.New("Destination asset has no geo location")
+			log.Error(err.Error())
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+	} else {
+		dstLong = distanceParam.Longitude
+		dstLat = distanceParam.Latitude
+		dstLongStr = strconv.FormatFloat(float64(distanceParam.Longitude), 'f', -1, 32)
+		dstLatStr = strconv.FormatFloat(float64(distanceParam.Latitude), 'f', -1, 32)
+	}
+
+	srcCoordinates := "(" + srcLongStr + " " + srcLatStr + ")"
+	dstCoordinates := "(" + dstLongStr + " " + dstLatStr + ")"
+
+	distance, err := ge.assetMgr.GetDistanceBetweenPoints(srcCoordinates, dstCoordinates)
+	if err != nil {
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
 	}
 
 	// Create Response to return
 	var resp DistanceResponse
+	resp.Distance = distance
+	resp.Longitude = dstLong
+	resp.Latitude = dstLat
 
 	// Format response
 	jsonResponse, err := json.Marshal(&resp)
@@ -1175,49 +1235,122 @@ func geGetDistanceGeoDataByName(w http.ResponseWriter, r *http.Request) {
 }
 
 func geGetWithinRangeGeoDataByName(w http.ResponseWriter, r *http.Request) {
-	/*
-	   // Get asset name from request path parameters
-	   vars := mux.Vars(r)
-	   assetName := vars["assetName"]
-	   log.Debug("Get GeoData for asset: ", assetName)
 
-	   // Retrieve query parameters
-	   query := r.URL.Query()
-	   excludePath := query.Get("excludePath")
+	// Get asset name from request path parameters
+	vars := mux.Vars(r)
+	assetName := vars["assetName"]
+	log.Debug("Get Within Range GeoData for asset: ", assetName)
 
-	   // Make sure scenario is active
-	   if ge.activeModel.GetScenarioName() == "" {
-	           err := errors.New("No active scenario")
-	           log.Error(err.Error())
-	           http.Error(w, err.Error(), http.StatusNotFound)
-	           return
-	   }
+	// Make sure scenario is active
+	if ge.activeModel.GetScenarioName() == "" {
+		err := errors.New("No active scenario")
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
 
-	   // Find asset in active scenario model
-	   node := ge.activeModel.GetNode(assetName)
-	   if node == nil {
-	           err := errors.New("Asset not found in active scenario")
-	           log.Error(err.Error())
-	           http.Error(w, err.Error(), http.StatusNotFound)
-	           return
-	   }
+	srcAsset := ge.assets[assetName]
+	if srcAsset == nil {
+		err := errors.New("Asset not in scenario")
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
 
-	   // Create GeoData Asset to return
-	   var asset GeoDataAsset
+	srcLongStr := ""
+	srcLatStr := ""
+	if srcAsset.geoData != nil {
+		srcPosition := srcAsset.geoData.position
+		srcPoint := convertJsonToPoint(srcPosition)
+		srcLongStr = strconv.FormatFloat(float64(srcPoint.Coordinates[0]), 'f', -1, 32)
+		srcLatStr = strconv.FormatFloat(float64(srcPoint.Coordinates[1]), 'f', -1, 32)
+	} else {
+		err := errors.New("Asset has no geo location")
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
 
-	   // Format response
-	   jsonResponse, err := json.Marshal(&asset)
-	   if err != nil {
-	           log.Error(err.Error())
-	           http.Error(w, err.Error(), http.StatusInternalServerError)
-	           return
-	   }
+	// Retrieve Within Range parameters from request body
+	var withinRangeParam WithinRangeParameters
+	if r.Body == nil {
+		err := errors.New("Request body is missing")
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	decoder := json.NewDecoder(r.Body)
+	err := decoder.Decode(&withinRangeParam)
+	if err != nil {
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
 
-	   // Send response
-	   w.Header().Set("Content-Type", "application/json; charset=UTF-8")
-	   w.WriteHeader(http.StatusOK)
-	   fmt.Fprint(w, string(jsonResponse))
-	*/
+	dstLong := float32(0.0)
+	dstLat := float32(0.0)
+	dstLongStr := ""
+	dstLatStr := ""
+	if withinRangeParam.AssetName != "" {
+
+		// Find second asset in active scenario model
+		dstAsset := ge.assets[withinRangeParam.AssetName]
+		if dstAsset == nil {
+			err := errors.New("Destination asset not in scenario")
+			log.Error(err.Error())
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+		if dstAsset.geoData != nil {
+			dstPosition := dstAsset.geoData.position
+			dstPoint := convertJsonToPoint(dstPosition)
+			dstLong = dstPoint.Coordinates[0]
+			dstLat = dstPoint.Coordinates[1]
+			dstLongStr = strconv.FormatFloat(float64(dstPoint.Coordinates[0]), 'f', -1, 32)
+			dstLatStr = strconv.FormatFloat(float64(dstPoint.Coordinates[1]), 'f', -1, 32)
+		} else {
+			err := errors.New("Destination asset has no geo location")
+			log.Error(err.Error())
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+	} else {
+		dstLong = withinRangeParam.Longitude
+		dstLat = withinRangeParam.Latitude
+		dstLongStr = strconv.FormatFloat(float64(withinRangeParam.Longitude), 'f', -1, 32)
+		dstLatStr = strconv.FormatFloat(float64(withinRangeParam.Latitude), 'f', -1, 32)
+	}
+
+	srcCoordinates := "(" + srcLongStr + " " + srcLatStr + ")"
+	dstCoordinates := "(" + dstLongStr + " " + dstLatStr + ")"
+	radius := strconv.FormatFloat(float64(withinRangeParam.Radius), 'f', -1, 32)
+
+	withinRange, err := ge.assetMgr.GetWithinRangeBetweenPoints(srcCoordinates, dstCoordinates, radius)
+	if err != nil {
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	// Create Response to return
+	var resp WithinRangeResponse
+	resp.Within = withinRange
+	resp.Longitude = dstLong
+	resp.Latitude = dstLat
+
+	// Format response
+	jsonResponse, err := json.Marshal(&resp)
+	if err != nil {
+		log.Error(err.Error())
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	// Send response
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	w.WriteHeader(http.StatusOK)
+	fmt.Fprint(w, string(jsonResponse))
 }
 
 func geGetGeoDataByName(w http.ResponseWriter, r *http.Request) {
