# go-apps/meep-gis-engine/server/model_distance_response.go
@@ -28,5 +28,11 @@ package server
 type DistanceResponse struct {
 
 	// Distance between two points (in meters)
-	Distance float32 `json:"distance,omitempty"`
+	Distance float32 `json:"distance"`
+
+	// Destination asset latitude
+	Latitude float32 `json:"latitude,omitempty"`
+
+	// Destination asset longitude
+	Longitude float32 `json:"longitude,omitempty"`
 }
